Fixed layout issues

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
 }
 body {
   background-color: black;
+  overflow-x: hidden;
 }
 section {
   display: flex;
